# Projet

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build_and_run.ps1  journaux.json
ATC/: CMakeLists.txt  avion.cpp  avion.h  constantes.h  main.cpp  monde.cpp  monde.h  textures_jeu.cpp  textures_jeu.h  tour_controle.cpp  tour_controle.h  utilitaires.h
ATC_Simulation/: .gitignore  Avion.cpp  Avion.cpp.backup  Avion.hpp  Commun.hpp  GestionnaireRessources.hpp  Journaliseur.hpp  TourControle.cpp  TourControle.hpp  main.cpp  principal.cpp
